@@ -170,8 +170,6 @@ jpackage \
     --main-class com.albumorganizer.AlbumOrganizerApp \
     --icon target/app-icon.icns \
     --dest target/dist \
-    --add-modules javafx.controls,javafx.fxml,javafx.swing,javafx.graphics,javafx.base \
-    --jlink-options "--module-path target/lib" \
     --java-options "-Dfile.encoding=UTF-8" \
     --java-options "-Dapple.awt.application.name=AlbumOrganizer"
 rm target/lib/album-organizer-1.0.0.jar
